# merkql

./: BENCHMARKS.md  Cargo.toml  FAILURE-MODES.md  README.md
.github/workflows/: ci.yml
benches/: throughput.rs
docs/: examples.html  index.html
docs/examples/: audit-trail.html  event-sourced-cart.html  sensor-pipeline.html
examples/audit-trail/: Cargo.toml
examples/audit-trail/src/: main.rs
examples/event-sourced-cart/: Cargo.toml
examples/event-sourced-cart/src/: main.rs
examples/sensor-pipeline/: Cargo.toml
examples/sensor-pipeline/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress.rs  group_offsets.rs  hash_from_hex.rs  index_entry.rs  node_deser.rs  record_deser.rs  retention_marker.rs  snapshot_deser.rs  topic_config.rs
scripts/: run-fuzz.sh  run-miri.sh  run-tsan.sh
src/: broker.rs  compression.rs  consumer.rs  group.rs  hash.rs  lib.rs  partition.rs  producer.rs  store.rs  topic.rs  tree.rs
tests/: jepsen_nemesis.rs  jepsen_proptest.rs  jepsen_report.rs  pack_validation.rs  scale_test.rs  v2_features_test.rs
tests/common/: mod.rs
